# esp32-radio

./: Cargo.toml  stations.json
.cargo/: config.toml
src/: ft6236_asynch.rs  graphics.rs  main.rs  my_channel.rs  sdcard.rs  tsc2007.rs
