[package]
name = "esp32-radio"
version = "0.1.0"
authors = ["maxwen <max.weninger@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.17.0", features = ["esp32", "embassy", "embassy-time-timg0", "async", "psram-2m", "embassy-executor"] }
esp-backtrace = { version = "0.11.1", features = ["esp32", "panic-handler", "exception-handler", "colors", "println"] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.5.1", features = ["esp32", "wifi", "embassy-net"] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
static_cell = { version = "2.0.0", features = ["nightly"] }
embassy-time = { version = "0.3.0" }
embassy-executor = { version = "0.5.0", features = ["nightly", "integrated-timers"] }
embassy-sync = "0.5.0"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "dns"] }
embassy-embedded-hal = { version = "0.1.0" }
embassy-futures = "0.1.1"
embedded-graphics = "0.8.1"
embedded-svc = { version = "0.27.0", default-features = false, features = ["log", "use_serde"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-hal-async = "1.0.0"
embedded-sdmmc = { version = "0.7.0" }
reqwless = { version = "0.11.0", features = ["alloc"] }
rmp3 = { version = "0.3", default-features = false }
profont = "0.7.0"
eg-seven-segment = "0.2.0"
esp32-utils-crate = { path = "../esp32-utils-crate" }
embedded-iconoir = { version = "0.2.3", features = ["96px", "48px"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
display-interface-spi = "0.5.0"
mipidsi = "0.7.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

[patch.crates-io]
esp-hal = { path = "../esp-hal/esp-hal" }
esp-wifi = { path = "../esp-wifi/esp-wifi"}
reqwless = { path = "/home/maxl/esp32/rust/reqwless" }
rmp3 = { path = "../rmp3" }
mipidsi = { path = "../mipidsi/mipidsi"}
